--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+@font-face {
+  font-family: "Lato";
+  src: url("./utils/fonts/LatoLatin-Regular.woff"),
+    url("./utils/fonts/LatoLatin-Regular.woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-size: 0.8rem;
+  font-family: "Lato";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
